--- a/notebooks/KDD_model-DL.ipynb
+++ b/notebooks/KDD_model-DL.ipynb
@@ -799,6 +799,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## SkLearn Wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dl_models(optimizer='rmsprop', init='glorot_uniform'):\n",
+    "    #create model\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(32, input_dim=X_train.shape[1],kernel_initializer='random_uniform'))\n",
+    "    model.add(Activation('relu'))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(Dense(16, input_dim=X_train.shape[1],kernel_initializer='random_uniform'))\n",
+    "    model.add(Activation('relu'))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(Dense(8, kernel_initializer='random_uniform'))\n",
+    "    model.add(Activation('relu'))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(Dense(1,kernel_initializer='random_uniform'))\n",
+    "    model.add(Activation('sigmoid'))\n",
+    "    #compile model\n",
+    "    model.compile(optimizer=OPTIMIZER,\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Cross Validation"
    ]
   },
@@ -5112,7 +5145,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
